✨ resolve adaptive version in reports

--- a/llm_bench/Dockerfile
+++ b/llm_bench/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3.10-bookworm
+RUN apt-get update -qqy  && apt-get install curl jq -qqy
+
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
