--- a/llm_bench/job.yaml
+++ b/llm_bench/job.yaml
@@ -10,6 +10,7 @@ spec:
       containers:
         - name: benchmark-job
           image: public.ecr.aws/o5q0o9k5/adaptive/llm-bench:v7
+          imagePullPolicy: Always
           env:
             - name: VLLM_ENDPOINT
               value: http://vllm-svc-llama-7b
